# project-ult-graph-engine

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
artifacts/frontend-api/: impact.json  paths.json  subgraph.json
benchmarks/: __init__.py  conftest.py  generate_synthetic.py  report.py  run_benchmark.py
benchmarks/artifacts/: lite_target_100k_800k.json  lite_target_100k_800k.txt
docs/: PROGRESS.md  PROPAGATION_CANARY_RUNBOOK.md  TASK_BREAKDOWN.md  graph-engine.project-doc.md
examples/: consumer_main_core.py  consumer_stream_layer.py
graph_engine/: __init__.py  client.py  config.py  evidence.py  live_metrics.py  models.py  public.py  version.py
graph_engine/promotion/: __init__.py  interfaces.py  planner.py  service.py
graph_engine/proofs/: __init__.py  holdings_live_graph.py
graph_engine/propagation/: __init__.py  _gds.py  channels.py  context.py  event.py  fundamental.py  holdings.py  merge.py  pipeline.py  reflexive.py  scoring.py
graph_engine/providers/: __init__.py  phase0.py  phase1.py
graph_engine/query/: __init__.py  service.py  simulation.py
graph_engine/reload/: __init__.py  artifact_reader.py  interfaces.py  projection.py  service.py
graph_engine/rollout/: __init__.py  canary.py  evidence.py  guard.py
graph_engine/schema/: __init__.py  definitions.py  indexes.py  manager.py
graph_engine/snapshots/: __init__.py  artifact_writer.py  generator.py  writer.py
graph_engine/status/: __init__.py  consistency.py  manager.py  store.py
graph_engine/sync/: __init__.py  live_graph.py
project_ult_graph_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  fakes.py
tests/boundary/: __init__.py  test_red_lines.py
tests/contract/: __init__.py  test_contracts_alignment.py  test_frontend_api_artifacts.py  test_runtime_contract.py
tests/integration/: test_benchmark_neo4j.py  test_full_propagation.py  test_live_closure.py  test_phase0_status_provider.py  test_postgresql_status_store.py  test_promotion_sync.py  test_propagation_snapshot.py  test_query.py  test_reload.py  test_simulation.py  test_status.py
tests/regression/: __init__.py  test_with_shared_fixtures_graph.py
tests/smoke/: __init__.py  test_public_smoke.py
tests/unit/: test_benchmark_generate.py  test_client.py  test_config.py  test_contract_schemas.py  test_evidence.py  test_gds_availability.py  test_holdings_live_graph_proof.py  test_live_metrics.py  test_models.py  test_phase0_status_provider.py  test_phase1_from_env.py  test_phase1_provider.py  test_postgresql_status_store.py  test_promotion.py  test_propagation.py  test_propagation_channels.py  test_propagation_event.py  test_propagation_holdings.py  test_propagation_merge.py  test_propagation_reflexive.py  test_query.py  test_reload.py  test_reload_artifact_reader.py  test_rollout.py  test_rollout_runbook.py  test_schema.py  test_simulation.py  test_snapshots.py  test_stage4_world_state_guard.py  test_status.py  test_sync.py
