[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-ult-graph-engine"
version = "0.1.0"
description = "Scaffold workspace for graph-engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.0",
    "project-ult-contracts>=0.1.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "psycopg>=3.0",
    "pytest-asyncio",
    "pytest>=8.0",
    "ruff",
]
postgres = [
    "psycopg>=3.0",
]

[tool.setuptools.packages.find]
include = ["graph_engine*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
mypy_path = "../contracts/src"

[tool.ruff]
line-length = 100
target-version = "py311"
