[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-ult-graph-engine"
version = "0.1.1"
description = "Graph engine subsystem (Iceberg canonical truth + Neo4j live mirror, promotion + propagation + snapshot + cold reload + readonly query/simulation) for project-ult."
readme = "README.md"
# graph-engine consumes contracts.Ex-3 (CandidateGraphDelta) but does NOT
# go through subsystem-sdk (it's a graph infrastructure layer, not a
# producer subsystem). So requires-python is anchored to
# contracts (3.11+) + neo4j 5.0 (3.11+) — no need to follow
# subsystem-sdk's <3.13 cap. Keep open until any direct dep needs it.
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.0",
    # Stage 2.10 milestone-test-baseline: pin to >=0.1.3 (matches
    # announcement Stage 2.8 follow-up #3 + news Stage 2.9 baseline).
    # graph-engine consumes Ex-3 (CandidateGraphDelta) + GraphSnapshot
    # + GraphImpactSnapshot from contracts; the v0.1.3 release added
    # producer_context extension slot + Ex1.evidence + relaxed
    # Ex2.affected_sectors (backward compatible). graph-engine itself
    # doesn't NEED these new slots, but pinning to the same floor as
    # all other subsystems keeps the cross-repo install graph stable
    # (no transitive resolution surprises).
    "project-ult-contracts>=0.1.3",
    "pydantic>=2.0",
]

[project.optional-dependencies]
# Stage-2 plan iron rule #3 split:
# - dev: offline-first pure-pip (test-fast / smoke lanes use only this).
# - contracts-schemas: cross-repo source-of-truth pin (contract lane).
# - shared-fixtures: real audit-eval fixtures (regression lane).
dev = [
    "mypy",
    "psycopg>=3.0",
    "pytest>=8.0",
    "pytest-asyncio",
    "ruff",
]
postgres = [
    "psycopg>=3.0",
]
contracts-schemas = [
    "project-ult-contracts @ git+https://github.com/shenfanjie5-bit/project-ult-contracts.git@v0.1.3",
]
shared-fixtures = [
    "project-ult-audit-eval @ git+https://github.com/shenfanjie5-bit/project-ult-audit-eval.git@v0.2.2",
]

[tool.setuptools.packages.find]
include = ["graph_engine*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
mypy_path = "../contracts/src"

[tool.ruff]
line-length = 100
target-version = "py311"
